test/libsolidity/syntaxTests/pragma/experimental_solidity_out_of_order_1.sol
contract A {}

pragma experimental solidity;
// ====
// EVMVersion: >=constantinople
// ----
// ParserError 8185: (45-45): Experimental pragma "solidity" can only be set at the beginning of the source unit.
